# BrowseAnimate_old

./: .gitignore
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/include/libavutil/: ffversion.h
app/libs/include/surface/hardware/: fb.h  gralloc.h  hardware.h
app/libs/include/surface/system/: window.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.h
app/src/main/cpp/ffmpeg/: ffmpeg.cpp  ffmpeg.h  ffmpeg_buffer.cpp  ffmpeg_buffer.h  ffmpeg_main.cpp  ffmpeg_main.h  ffmpeg_packet.cpp  ffmpeg_packet.h  ffmpeg_surface.cpp  ffmpeg_surface.h
app/src/main/cpp/ffmpeg/decoder/: ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_decoder_audio.cpp  ffmpeg_decoder_audio.h  ffmpeg_decoder_video.cpp  ffmpeg_decoder_video.h
app/src/main/cpp/ffmpeg/encoder/: ffmpeg_encoder.cpp  ffmpeg_encoder.h  ffmpeg_encoder_audio.cpp  ffmpeg_encoder_audio.h  ffmpeg_encoder_video.cpp  ffmpeg_encoder_video.h
app/src/main/java/com/hihua/browseanimate/activity/: ActivityDecoder.java  ActivityEncoder.java  ActivityIndex.java  ActivitySetting.java
app/src/main/java/com/hihua/browseanimate/cmd/: CmdBase.java  CmdClient.java  CmdServer.java
app/src/main/java/com/hihua/browseanimate/config/: ConfigCollect.java  ConfigPush.java  ConfigRecord.java
app/src/main/java/com/hihua/browseanimate/ffmpeg/: FFmpegBase.java  FFmpegDecoder.java  FFmpegEncoder.java  FFmpegSurface.java
app/src/main/java/com/hihua/browseanimate/model/: ModelAudio.java  ModelCamera.java  ModelNsd.java
app/src/main/java/com/hihua/browseanimate/push/: PushBase.java  PushDecoder.java  PushEncoder.java
app/src/main/java/com/hihua/browseanimate/service/: ServiceMain.java
app/src/main/java/com/hihua/browseanimate/socket/: SocketBuffer.java  SocketClient.java  SocketServer.java
app/src/main/java/com/hihua/browseanimate/util/: UtilDateTime.java  UtilLog.java  UtilTimer.java
app/src/main/java/com/hihua/browseanimate/wifip2p/: WifiP2PBase.java  WifiP2PClient.java  WifiP2PServer.java
app/src/main/java/com/hihua/browseanimate/window/: WindowDevice.java  WindowLoading.java
app/src/main/res/layout/: activity_decoder_test.xml  activity_encoder_test.xml  activity_main.xml  activity_setting.xml  item_collect.xml  item_device.xml  layout_main_browse.xml  layout_main_camera.xml  layout_main_menu.xml  layout_setting_push.xml  layout_setting_record.xml  window_device.xml  window_loading.xml
app/src/main/res/raw/: gl_fs.txt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
